# Data-Processing

./: .gitignore  Alpha_Employees.xlsx  pyproject.toml
data/: Employees.xlsx  all.csv  all.json  all.xlsx  all.yaml  csv_into_excel.xlsx  csv_into_excel_1.xlsx  empty_file.xlsx  excel_from_csv_files.xlsx  excel_merge_csv_files.xlsx  excel_with_list_displaced.xlsx  excel_with_multiple_sheets.xlsx  marks_file.csv  new_excel_file_2.xlsx  new_excel_file_3.xlsx  new_excel_file_4.xlsx  new_json_file.json  output.csv  output_pandas.csv  sample_json.json  simple_text_file_created.txt  text.txt  weight_file.csv
src/: all_read_write.py  excel_dict_pandas.py  jmes_search.py  json_processing.py  merge_multiple_csv_into_excel.py  multiple_sheets_excel.py  numpy_csv.py  pandas_csv.py  pandas_excel.py  pandas_excel_2.py  pyYAML.py  read_csv_into_excel.py  read_excel.py  read_excel_update.py  shifting_pandas_excel.py  simple_read_write.py
src/employees-op/: Alpha_Employees.xlsx  Beta_Employees.xlsx  append_row_in_excell.py  empolyees.py  gamma_Employees.xlsx  replace_cell_in_excel.py  simple_operations.py
tests/: simple_read_write_test.py
